feat(backend): profile updating (#3)
